# contact-modelling

./: CMakeLists.txt  README.md
client/inc/: AlgDisplacementsToForces.hpp  AlgForcesToDisplacements.hpp  AlgInterface.hpp  Delaunay.hpp  DisplacementsFromSensors.hpp  DisplacementsFromSensorsInterpolated.hpp  DisplacementsFromSensorsNatural.hpp  Forces.hpp  InterpolatorInterface.hpp  InterpolatorLinearDelaunay.hpp  MeshInterface.hpp  MeshNatural.hpp  MeshNode.hpp  MeshNodeVal1d.hpp  MeshNodeVal3d.hpp  MeshRegularSquare.hpp  Point.hpp  ResultantDisplacements.hpp  SensorValuesConverter.hpp  SkinConnector.hpp  SkinProviderInterface.hpp  SkinWareProvider.hpp  SkinYamlProvider.hpp  main.hpp  skin_helpers.hpp  traits_helpers.hpp
client/inc/helpers/: container_algorithms.hpp  elastic_linear_model.hpp  geometry.hpp  math.hpp  plot.hpp  skin.hpp
client/src/: CMakeLists.txt  SensorValuesConverter.cpp  main.cpp
client/src/test/: CMakeLists.txt  test_alg_interface.cpp  test_elastic_model.cpp  test_eq_almost.cpp  test_skin_yaml_provider.cpp
client/src/test/inc/: custom_test_macros.hpp
cm-clients/: CMakeLists.txt  README.md
cm-clients/inc/: reconstruction-forces.hpp  reconstruction-pressures.hpp  reconstruction.hpp
cm-clients/src/: CMakeLists.txt  construct_suite.cpp  istream_specialisations.cpp  main.cpp  process_options.cpp  reconstruction-forces.cpp  reconstruction-pressures.cpp  reconstruction.cpp  timeit.cpp
cmake/: Findlibtsnnls.cmake  README.md
contact-modelling/: CMakeLists.txt  README.md
contact-modelling/inc/: AlgDisplacementsToForces.hpp  AlgDisplacementsToNonnegativeNormalForces.hpp  AlgDisplacementsToNonnegativePressures.hpp  AlgDisplacementsToPressures.hpp  AlgForcesToDisplacements.hpp  AlgInterface.hpp  AlgPressuresToDisplacements.hpp  Delaunay.hpp  InterpolatorInterface.hpp  InterpolatorLinearDelaunay.hpp  MeshInterface.hpp  MeshNatural.hpp  MeshNode.hpp  MeshRegularRectangular.hpp  MeshRegularSquare.hpp  SkinAttributes.hpp  SkinProviderInterface.hpp  SkinWareProvider.hpp  SkinYamlProvider.hpp
contact-modelling/inc/cm/: cm.hpp
contact-modelling/inc/cm/algorithm/: displacements_to_forces.hpp  displacements_to_nonnegative_normal_forces.hpp  displacements_to_nonnegative_pressures.hpp  displacements_to_pressures.hpp  forces_to_displacements.hpp  interface.hpp  pressures_to_displacements.hpp
contact-modelling/inc/cm/details/: container_algorithms.hpp  delaunay.hpp  details.hpp  elastic_model_boussinesq.hpp  elastic_model_love.hpp  exception.hpp  geometry.hpp  math.hpp  memory.hpp  skin.hpp  string.hpp
contact-modelling/inc/cm/grid/: cell.hpp  cell_shapes.hpp  grid.hpp  plot.hpp
contact-modelling/inc/cm/interpolator/: interface.hpp  linear_delaunay.hpp
contact-modelling/inc/cm/log/: log.hpp
contact-modelling/inc/cm/mesh/: interface.hpp  natural.hpp  node.hpp  plot.hpp  rectangular_base.hpp  square_base.hpp
contact-modelling/inc/cm/skin/: attributes.hpp
contact-modelling/inc/cm/skin_provider/: interface.hpp  luca.hpp  yaml.hpp
contact-modelling/inc/helpers/: elastic_linear_model.hpp  iterate.hpp  log.hpp  memory.hpp  plot.hpp  string.hpp  traits.hpp
contact-modelling/src/: AlgDisplacementsToForces.cpp  AlgDisplacementsToNonnegativeNormalForces.cpp  AlgDisplacementsToNonnegativePressures.cpp  AlgDisplacementsToPressures.cpp  AlgForcesToDisplacements.cpp  AlgInterface.cpp  AlgPressuresToDisplacements.cpp  CMakeLists.txt  Delaunay.cpp  Grid.cpp  GridCellShapes.cpp  InterpolatorInterface.cpp  InterpolatorLinearDelaunay.cpp  MeshInterface.cpp  MeshNatural.cpp  MeshRectangularBase.cpp  MeshRegularRectangular.cpp  MeshRegularSquare.cpp  MeshSquareBase.cpp  SkinProviderInterface.cpp  SkinProviderLuca.cpp  SkinProviderYaml.cpp  SkinYamlProvider.cpp  elastic_model_boussinesq.cpp  elastic_model_love.cpp  geometry.cpp  log.cpp  plot.cpp
contact-modelling/src/helpers/: elastic_linear_model.cpp  log.cpp  plot.cpp
contact-modelling/test/: CMakeLists.txt  test_alg_interface.cpp  test_dump_mesh.cpp  test_elastic_model.cpp  test_elastic_model_forces.cpp  test_elastic_model_pressures.cpp  test_eq_almost.cpp  test_erase_by_indices.cpp  test_geometry.cpp  test_interpolator_linear_delaunay.cpp  test_log.cpp  test_log_plateau_level.cpp  test_mesh_interface.cpp  test_skin_provider_yaml.cpp  test_skin_yaml_provider.cpp  tests_driver.cpp
contact-modelling/test/_generators/: gen.py
contact-modelling/test/_generators/forces_model/: Agen_for_unit_tests.m
contact-modelling/test/_generators/pressure_model/: Agen_for_unit_tests.m  L1.m  L2.m  Zlove_w.m  beta10.m  beta20.m  eq_almost.m  psi10.m  psi20.m  r10.m  r20.m  safe_log.m
contact-modelling/test/algorithm/: alg_interface.cpp
contact-modelling/test/details/: eq_almost.cpp  erase_by_indices.cpp  exception.cpp  geometry.cpp
contact-modelling/test/elastic_models/: forces.cpp  forces_fixture.hpp  pressures.cpp  pressures_fixture.hpp
contact-modelling/test/grid/: cell_shapes.cpp  dump_grid.cpp  grid.cpp
contact-modelling/test/inc/: custom_test_macros.hpp  test_module_header.hpp
contact-modelling/test/interpolator/: linear_delaunay.cpp
contact-modelling/test/log/: logging.cpp
contact-modelling/test/skin_provider/: luca.cpp  luca_details.cpp  luca_details_fixtures.hpp  luca_fixtures.hpp  yaml.cpp
contact-modelling/tools/: plot_mesh.py
contact-modelling/tools/input-generators/: common.py
data/: CMakeLists.txt  README.md  calibration.cache  regionalisation.cache
doc/: .gitignore  Doxyfile-dev.in  Doxyfile.in  README.md  documentation.html
driver/: .gitignore  CMakeLists.txt  Makefile  gen_simulated_input.py  init.c  init.h  main.c  simulated_input.h  start-driver.sh  stop-driver.sh
input-generators/: common.py  gen_peaks_input.py
triangle/: CMakeLists.txt
triangle/inc/: triangle.h
triangle/src/: CMakeLists.txt  triangle.c
